{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "576bffcc-68f6-4b69-bd84-424b8e003918",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "772cad8b-041d-40e0-b142-03b6ef01a36d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDrag",
                    "type": "Value",
                    "id": "7c398186-9883-47f0-a0f5-16b062c12570",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "0c243735-8dfe-4d6c-a381-3d160cdfdc9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "316811c0-5afd-43e0-9712-78ab9a6d8f35",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0e38b210-3109-402c-92ec-672612120960",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpeedUp",
                    "type": "Button",
                    "id": "885248b1-4b7d-4782-93ed-9aa1226c06b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "a183b9b4-9341-4743-a914-a63386b4cb0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "c8c4b500-e297-4b68-b013-1d91bdc7468f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchItemSlot",
                    "type": "Value",
                    "id": "8fbab21d-1ccb-42d3-a095-66e32e8ebc29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDragSec",
                    "type": "Value",
                    "id": "79edb2f1-dee1-49c0-9475-1629b6dd42c1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClickSec",
                    "type": "Button",
                    "id": "b0dea585-af10-45b2-87f4-e3094737a0ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClickSec",
                    "type": "Button",
                    "id": "2f19a639-7bf0-40a3-928e-a15487c715e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "13ed6b1a-125c-41a0-8002-638f5c2dfef1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "df2d9116-4b41-44dc-9ec7-948c6e75fe8f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f17e382f-af1b-47c3-9dea-c790e2042e30",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9bb00691-1a78-4728-9ec1-aaf073f17378",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "76c31273-cd38-48b7-9e16-7d0ce6e6a6b1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f6f977ab-791d-4b78-a602-c4c1920342fe",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48e5f8e3-f1e5-4734-8a87-664d2d7203c3",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDrag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c2c8242-51a8-42da-b638-e2866bdb4698",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d55eaf9-db86-4cdf-ad59-86cc21c32637",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d68f7e65-763b-4a67-9a90-6603e2abdaac",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "292b0fe0-8ae8-4806-a5f9-80dad4622959",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Tap(duration=0.3,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f51e615-03c9-4b90-94b0-a5b6eeed8268",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fc6b34c-c934-4d0b-902c-60792231e617",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e796720c-ff25-4493-9119-e2d070d0dd02",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e33d3d48-2524-4ef6-86f7-7c4abbf8b59b",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "cce1ad4e-2dfc-4e5e-aa41-c11798d240a2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchItemSlot",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d1e1c0b2-b7b4-4edd-a601-43996b50bb07",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchItemSlot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9bd20c25-91ba-4717-8fc1-463fc44cc47c",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchItemSlot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ac010aa2-5932-4462-aecf-2ed6a2bd6529",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchItemSlot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0a155781-85c6-4cfd-b421-5b9f006848b7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchItemSlot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ea4630cc-980c-44ef-bfe6-280d2d837baf",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDragSec",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d49c371-d1f3-406a-b90b-0294aeaeeb2b",
                    "path": "<Touchscreen>/touch1/tap",
                    "interactions": "Press(pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClickSec",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "308e03b5-ce9b-4730-b097-b5db848ec308",
                    "path": "<Touchscreen>/touch1/indirectTouch",
                    "interactions": "Tap(duration=0.3,pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickSec",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}